--- a/src/main/resources/static/tasks.html
+++ b/src/main/resources/static/tasks.html
@@ -24,19 +24,20 @@
         (async function () {
             const main = document.querySelector('main');
             const params = new URLSearchParams(location.search);
-            const response = params.has('group') ? await fetch(`/groups/${params.get('group')}`) : await fetch('/tasks');
+            const isGroupParam = params.has('group') ? true : false; 
+            const response = isGroupParam ? await fetch(`/groups/${params.get('group')}`) : await fetch('/tasks');
 
             if(response.ok) {
                 const tasks = await response.json();
                 const list = document.createElement('ul');
-                tasks.forEach(task => list.appendChild(createTask(task)));
+                tasks.forEach(task => list.appendChild(createTask(task, null)));
                 main.prepend(list);
             }
 
             const form = document.querySelector('form');
             form.addEventListener('submit', async (event) => {
                 event.preventDefault();
-                const resp = await fetch('/tasks', {
+                const resp = await fetch(isGroupParam ? `/groups/${params.get('group')}/tasks` : '/tasks', {
                     method: 'post',
                     headers: {
                         'Accept': 'application/json',
@@ -44,32 +45,83 @@
                     },
                     body: JSON.stringify({
                         description: form.elements.description.value,
-                        deadline: form.elements.deadline.value && form.elements.deadline.value + ':00.000'
+                        deadline: form.elements.deadline.value && form.elements.deadline.value + ':00.000',
+                        //group: isGroupParam ? getGroup() : null
                     })
                 });
                 if(resp.ok) {
                     const taskFromServer = await resp.json();
-                    document.querySelector('ul').appendChild(createTask(taskFromServer));
+                    document.querySelector('ul').appendChild(createTask(taskFromServer, null));
                     form.reset();
                 }
             })
 
+            // async function getGroup() {
+            //     const response = await fetch(`/groups/${params.get('group')}`)
+            //     if(response.ok) {
+            //         return await response.json();
+            //     }
+            // }
 
-            function createTask({id, deadline, description, done}) {
-                const result = document.createElement('li');
+            function createTask({id, deadline, description, done}, listElementId) {
+                const result = listElementId == null ? document.createElement('li') : document.getElementById(listElementId);
+
+                result.setAttribute('id', id);
                 result.innerHTML = `
-                    <label>
-                        <input type="checkbox" ${done ? 'checked' : ''} />
-                        ${description}
-                        <small>${deadline && deadline.replace('T', ' ')}</small>
-                    </label>
+                        <label>
+                            <input type="checkbox" ${done ? 'checked' : ''} />
+                            ${description}
+                            <small>${deadline && deadline.replace('T', ' ')}</small>
+                        </label>
+                        <button>Edit</button>
                 `;
+                result.querySelector('button').addEventListener('click', async () => {
+                    const editFormPlace = document.getElementById(id);
+                    editFormPlace.innerHTML = `
+                        <form id="editForm">
+                            <label>Description
+                                <input type="text" name="description" value='${description}'/>
+                            </label>
+                            <label>Deadline
+                                <input 
+                                    type="datetime-local"
+                                    name="deadline" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}" 
+                                    value=${deadline}
+                                />
+                            </label>
+                            <button type="submit">Update!</button>       
+                        </form>
+                    `;
+                    const editForm = document.getElementById('editForm');
+                    editForm.addEventListener('submit', async (e) => {
+                        e.preventDefault();
+                        const updateResponse = await fetch(`/tasks/${id}`, 
+                            {
+                                method: 'PUT', 
+                                headers: {
+                                    'Content-Type': 'application/json'
+                                },
+                                body: JSON.stringify({
+                                    description: editForm.elements.description.value,
+                                    deadline: editForm.elements.deadline.value
+                                })
+                            }
+                        )
+                        if(updateResponse.ok) {
+                            const updatedTask = await fetch(`/tasks/${id}`)
+                            if(updatedTask.ok) {
+                               createTask(await updatedTask.json(), id); 
+                            } 
+                        }
+                    });
+                })
                 result.querySelector('input').addEventListener('click', async (e) => {
                     const response = await fetch(`/tasks/${id}`, { method: 'PATCH' });
                     if(!response.ok) {
                         e.target.checked = !e.target.checked;
                     }
                 });
+            
                 return result;
             }
         })();
